<resources>
    <plurals name="numberOfPlacesAvailable">
        <item quantity="one">%d place available</item>
        <item quantity="other">%d places available</item>
    </plurals>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name">Blabla Fit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="no_internet_connection">Aucune connexion internet</string>
    <string name="prompt_email">john.doe@gmail.com</string>
    <string name="prompt_password">6 caractères minimum</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="error_invalid_email">Adresse email invalide</string>
    <string name="error_invalid_password">Mot de passe trop court</string>
    <string name="error_mismatch_password">Les mots de passe ne correspondent pas</string>
    <string name="error_incorrect_password">Mot de passe incorrect</string>
    <string name="error_incorrect_credentials">L\'identifiant ou le mot de passe est incorrect</string>
    <string name="error_field_required">Ce champ est requis</string>
    <string name="server_error">Une erreur s\'est produite sur le serveur. </string>


    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- was "Signing up..." -->
    <string name="firebase_web_host" translatable="false">blablafit-bf234.firebaseapp.com</string>
    <string name="fui_progress_dialog_signing_up">Creating your shiny new account...</string>
    <string name="no_seance_available">Aucune séance organisée à cette date. Trouvez en une à proximité ou  créez la votre.</string>
    <string name="no_seance_available_for_category">It seems no workout is scheduled. Try and create your own so others can join you</string>
    <string name="no_messages">Aucun messages</string>
    <string name="no_messages_detail">Vos messages s\'afficheront ici lorsque des blablafiteurs vous contacteront.</string>
    <string name="email_sign_in_button">Sign in with Email</string>
    <string name="welcome">Bienvenue ! Vous allez bientôt pouvoir trouver des partenaires d\'entraînement et conquérir votre corps</string>
    <string name="login">Login</string>

    <string name="sign_in">Sign in</string>
    <string name="update_profile_dialog_title">Mise à jour du profil</string>
    <string name="update_photo_dialog_message">Voulez-vous mettre à jour votre photo de profil ?</string>
    <string name="cancel">Annuler</string>
    <string name="contact">Contact</string>
    <string name="participate">je participe</string>
    <string name="workout_title">Type de séance:</string>
    <string name="workout_duration">Durée :</string>
    <string name="workout_location">Location</string>
    <string name="workout_date">Date :</string>
    <string name="workout_description">Description :</string>
    <string name="workout_participants">Places restantes:</string>
    <string name="participate_button">Je participe</string>
    <string name="workout_author">Séance proposée par :</string>
    <string name="inoutdoor_choice_tv">Choisis où tu souhaites t\'entraîner</string>
    <string name="choice_gym_tv">En salle de sport</string>
    <string name="choice_outdoor_tv">En extérieur</string>
    <string name="workout_type_choice">Choisis ton type de séance</string>
    <string name="next_step_tv">étape suivante</string>
    <string name="add_description_tv">Ajoute un descriptif de ta séance (optionnel)</string>
    <string name="description_edittext_hint">(Optional) Workout description</string>
    <string name="date_and_duration_fragment_title_tv">Elabore la séance parfaite</string>
    <string name="find_gym_textview">Trouve ta salle</string>
    <string name="create">Create workout</string>
    <string name="searchViewHint">Rechercher</string>
    <string name="find_your_workout_location">Choisis ton lieu d\'entraînement</string>
    <string name="firstName">Prénom</string>
    <string name="lastName">Nom</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="basic_info">Basic information</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="next_step">Next</string>
    <string name="message_hint">Type a message</string>
    <string name="not_member">Not a member ? </string>
    <string name="already_member">Already a member ? </string>
    <string name="register">Register</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="invalid_password">Password must be at least 8 characters</string>
    <string name="wrong_password">Passwords don\'t match</string>
    <string name="mandatory_field">Mandatory</string>
    <string name="ok">Ok</string>
    <string name="incomplete_fullname">Please enter your first and last name</string>

    <string name="forgot_password">Forgot password ?</string>
    <string name="full_name">Your name</string>
    <string name="account_setup_title">Create your profile</string>
    <string name="step_one">Step 1/3</string>
    <string name="add_profile_picture">Add a profile picture</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="select_gender">Select your gender</string>
    <string name="previous_step">back</string>
    <string name="step_two">Step 2/3</string>
    <string name="fitness_level">Your fitness level</string>
    <string name="beginner">Beginner</string>
    <string name="beginner_description">I exercise once a week or less.</string>
    <string name="intermediate">Intermediate</string>
    <string name="intermediate_description">I workout 2 to 3 times a week.</string>
    <string name="advanced">Advanced</string>
    <string name="advanced_description">I workout 4 times a week or more.</string>
    <string name="step_three">Step 3/3</string>
    <string name="search_workout_hint">Search for a workout or a gym</string>
    <string name="all_workouts_section_title">Workouts in %1$s</string>
    <string name="invalid_place_gym_toast_message">Location must be a gym</string>
    <string name="invalid_place_address_toast_message">Location must be an address</string>
    <string name="empty_address_toast_message">Invalid location</string>
    <string name="full_body">Full body</string>
    <string name="upper_body">Upper body</string>
    <string name="legs">Legs</string>
    <string name="chest">Chest</string>
    <string name="back">Back</string>
    <string name="shoulders">Shoulders</string>
    <string name="arms">Arms</string>
    <string name="biceps">Biceps</string>
    <string name="triceps">Triceps</string>
    <string name="abs">Abs</string>
    <string name="cardio">Cardio</string>
    <string name="yoga">Yoga</string>
    <string name="description_hint">e.g : Pull ups - Bench press - Dead lift - Squats</string>
    <string name="no_description">No workout description provided.</string>
    <string name="user_profile">see profile</string>
    <string name="join">join workout</string>
    <string name="description_title">Workout description:</string>
    <string name="requests">Requests</string>
    <string name="request_activity_title">Manage Requests</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="no_requests">Requests will appear on this screen when people want join this workout.</string>
    <string name="userRating">Rating /5</string>
    <string name="completed_workouts">Completed workouts</string>
    <string name="edit_profile">Edit profile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_out">Sign out</string>
    <string name="empty_buddies">Your workout buddies will appear here once you will have completed a workout with them.</string>
    <string name="personal_info">Personal Info</string>
    <string name="workout_buddies">Workout buddies</string>
    <string name="my_profile">Profile</string>
    <string name="find_workout">Find a workout</string>
    <string name="my_workouts">My workouts</string>
    <string name="messages">Messages</string>
    <string name="new_workout">New workout</string>
    <string name="home">Home</string>
    <string name="near_by">Near by</string>
    <string name="add">Add</string>
    <string name="send_message">Send message</string>
    <string name="workout_details">Workout details</string>
    <string name="title">Title:</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="duration">Duration:</string>
    <string name="max_participants">Maximum participants:</string>
    <string name="indoor">Gym</string>
    <string name="outdoor">Outdoors</string>
    <string name="location_details">Location details</string>
    <string name="empty_selection_warning">Choose at least one type</string>
    <string name="location_rationale_title">Location required</string>
    <string name="location_rationale_message">In order to display nearby workouts, the app needs to access your device\'s location.</string>
    <string name="error_dismiss">Dismiss</string>
    <string name="location_permission_denied">Permission to access the device\'s location is denied.</string>
    <string name="allow">Allow</string>
    <string name="nearby_workouts_empty">Currently no workouts in %s</string>
    <string name="date_filter_label">By Date:</string>
    <string name="category_label_filter">By category:</string>
    <string name="city_label_filter">By city:</string>
    <string name="filters_title">Filters</string>
    <string name="choose_date">select a date</string>
    <string name="or">Or</string>
    <string name="welcome_register">Welcome</string>
    <string name="delete_workout">Delete workout</string>
    <string name="unjoin_workout">Unjoin workout</string>
    <string name="request_sent">Request sent</string>
    <string name="created_by">Created by %s</string>
    <string name="maps">Maps</string>
    <string name="empty_description">No description provided.</string>


</resources>